--- a/Builds/VisualStudio2012/open-ephys.vcxproj
+++ b/Builds/VisualStudio2012/open-ephys.vcxproj
@@ -337,6 +337,7 @@
     <ClCompile Include="..\..\Source\Processors\PulsePalOutput\PulsePalOutputEditor.cpp"/>
     <ClCompile Include="..\..\Source\Processors\RecordControl\RecordControl.cpp"/>
     <ClCompile Include="..\..\Source\Processors\RecordControl\RecordControlEditor.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\RecordNode\EngineConfigWindow.cpp"/>
     <ClCompile Include="..\..\Source\Processors\RecordNode\HDF5FileFormat.cpp"/>
     <ClCompile Include="..\..\Source\Processors\RecordNode\HDF5Recording.cpp"/>
     <ClCompile Include="..\..\Source\Processors\RecordNode\OriginalRecording.cpp"/>
@@ -1588,6 +1589,7 @@
     <ClInclude Include="..\..\Source\Processors\PulsePalOutput\PulsePalOutputEditor.h"/>
     <ClInclude Include="..\..\Source\Processors\RecordControl\RecordControl.h"/>
     <ClInclude Include="..\..\Source\Processors\RecordControl\RecordControlEditor.h"/>
+    <ClInclude Include="..\..\Source\Processors\RecordNode\EngineConfigWindow.h"/>
     <ClInclude Include="..\..\Source\Processors\RecordNode\HDF5FileFormat.h"/>
     <ClInclude Include="..\..\Source\Processors\RecordNode\HDF5Recording.h"/>
     <ClInclude Include="..\..\Source\Processors\RecordNode\OriginalRecording.h"/>
