--- a/Builds/VisualStudio2012/open-ephys.vcxproj.filters
+++ b/Builds/VisualStudio2012/open-ephys.vcxproj.filters
@@ -667,6 +667,9 @@
     <ClCompile Include="..\..\Source\Processors\RecordControl\RecordControlEditor.cpp">
       <Filter>open-ephys\Source\Processors\RecordControl</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Source\Processors\RecordNode\EngineConfigWindow.cpp">
+      <Filter>open-ephys\Source\Processors\RecordNode</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Source\Processors\RecordNode\HDF5FileFormat.cpp">
       <Filter>open-ephys\Source\Processors\RecordNode</Filter>
     </ClCompile>
@@ -2276,6 +2279,9 @@
     </ClInclude>
     <ClInclude Include="..\..\Source\Processors\RecordControl\RecordControlEditor.h">
       <Filter>open-ephys\Source\Processors\RecordControl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Processors\RecordNode\EngineConfigWindow.h">
+      <Filter>open-ephys\Source\Processors\RecordNode</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\Processors\RecordNode\HDF5FileFormat.h">
       <Filter>open-ephys\Source\Processors\RecordNode</Filter>
