--- a/Builds/VisualStudio2013/open-ephys.vcxproj
+++ b/Builds/VisualStudio2013/open-ephys.vcxproj
@@ -219,6 +219,7 @@
     <ClCompile Include="..\..\Source\Processors\PulsePalOutput\PulsePalOutputEditor.cpp"/>
     <ClCompile Include="..\..\Source\Processors\RecordControl\RecordControl.cpp"/>
     <ClCompile Include="..\..\Source\Processors\RecordControl\RecordControlEditor.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\RecordNode\EngineConfigWindow.cpp"/>
     <ClCompile Include="..\..\Source\Processors\RecordNode\HDF5FileFormat.cpp"/>
     <ClCompile Include="..\..\Source\Processors\RecordNode\HDF5Recording.cpp"/>
     <ClCompile Include="..\..\Source\Processors\RecordNode\OriginalRecording.cpp"/>
@@ -1470,6 +1471,7 @@
     <ClInclude Include="..\..\Source\Processors\PulsePalOutput\PulsePalOutputEditor.h"/>
     <ClInclude Include="..\..\Source\Processors\RecordControl\RecordControl.h"/>
     <ClInclude Include="..\..\Source\Processors\RecordControl\RecordControlEditor.h"/>
+    <ClInclude Include="..\..\Source\Processors\RecordNode\EngineConfigWindow.h"/>
     <ClInclude Include="..\..\Source\Processors\RecordNode\HDF5FileFormat.h"/>
     <ClInclude Include="..\..\Source\Processors\RecordNode\HDF5Recording.h"/>
     <ClInclude Include="..\..\Source\Processors\RecordNode\OriginalRecording.h"/>
